--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "dompurify": "^3.2.4",
     "lucide-react": "^0.453.0",
+    "mongodb": "5.5",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
