--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@tiptap/starter-kit": "^2.10.3",
     "@xyflow/react": "^12.3.2",
     "axios": "^1.7.7",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.4",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
     "mongodb": "5.5",
     "next": "14.2.15",
