--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.4",
+    "firebase": "^11.8.1",
+    "firebase-admin": "^12.0.0 || ^13.0.0",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
