--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tiptap/pm": "^2.10.3",
     "@tiptap/react": "^2.10.3",
     "@tiptap/starter-kit": "^2.10.3",
+    "@types/papaparse": "^5.3.16",
     "@xyflow/react": "^12.3.2",
     "axios": "^1.7.7",
     "bcryptjs": "^3.0.2",
@@ -45,6 +46,7 @@
     "next": "14.2.15",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
+    "papaparse": "^5.5.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
