--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tiptap/starter-kit": "^2.10.3",
     "@types/papaparse": "^5.3.16",
     "@xyflow/react": "^12.3.2",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.7.7",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
@@ -43,8 +44,8 @@
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.453.0",
-    "next": "14.2.15",
-    "next-auth": "^4.24.11",
+    "next": "^14.2.31",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "papaparse": "^5.5.3",
     "react": "^18",
