--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tiptap/starter-kit": "^2.10.3",
     "@types/papaparse": "^5.3.16",
     "@xyflow/react": "^12.3.2",
+    "aos": "^2.3.4",
     "autoprefixer": "^10.4.21",
     "axios": "^1.7.7",
     "bcryptjs": "^3.0.2",
@@ -57,6 +58,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
