--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.4.5",
     "@types/aos": "^3.0.7",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
