feat: enhance code formatting and CI process
- Add formatting checks and reminders in pre-commit hook.
- Update CI configuration to allow formatting errors temporarily.
- Introduce new formatting commands in package.json.
- Create a Prettier formatting plan document for team coordination.

--- a/.prettierignore
+++ b/.prettierignore
@@ -36,3 +36,25 @@ Thumbs.db
 # Temporary
 *.tmp
 *.temp
+
+# Documentation (often has specific formatting)
+docs/
+README.md
+README.zh-TW.md
+debug-folder.md
+
+# AI tool configurations (may have specific formatting)
+.claude/
+.gemini/
+.github/copilot-instructions.md
+
+# Test and debug files
+src/app/test-*/
+src/test/
+
+# Configuration files that may need specific formatting
+firestore.indexes.json
+components.json
+
+# Specific files with intentional formatting
+src/app/api/v1/prompts/[promptId]/folderPrompts-1.prompt.md
