--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
 
     - name: Check code formatting
       run: npm run format:check
+      continue-on-error: true  # TODO: Remove after team-wide formatting coordination
 
     - name: Build application
       run: npm run build
