--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
+    "swr": "^2.3.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
